# KVM

./: .gitignore  0 func.ksc  0.ksc  BACKLOG  CMakeLists.txt  Nod.ksc  README  README.md  SPECIFICATION  SPECIFICATION_2.md  Sample_1.ksc  Sample_2.ksc  TODO  app  execute_program.cpp  execute_program.hpp  expression.cpp  expression.hpp  function.hpp  inbuilt_functions.hpp  interpretator.cpp  literal.cpp  literal.hpp  literal_automat.uml  makefile  memory.cpp  memory.hpp  operand_object.cpp  operand_object.hpp  print_program.cpp  print_program.hpp  program execute.hpp  program expression.hpp  program function.hpp  program memory.hpp  program print.hpp  program read.hpp  program.hpp  read_program.cpp  read_program.hpp  (+2 more)
img/: automat.uml  element.uml  expression.uml  function_call.uml  if.uml  import.uml  program module.uml  return.uml  var declaration.uml
img/classes/: class.bin.uml  class.block.uml  (+18 more)
src/: Nodes.cpp  bin_operator.cpp  bin_operator.h  block.cpp  block.h  body.cpp  body.h  code.cpp  code.h  code_1st_level_instruction.cpp  code_1st_level_instruction.h  code_expression.cpp  code_expression.h  code_instruction.cpp  code_instruction.h  code_program.cpp  compile_time_error_exception.cpp  compile_time_error_exception.h  context.cpp  context.h  element.cpp  element.h  errors.hpp  execute_program.cpp  execute_program.hpp  executor.cpp  executor.h  expression.cpp  expression.h  expression.hpp  function.cpp  function.hpp  function_call.cpp  function_call.h  function_signature.cpp  function_signature.h  if.cpp  if.h  inbuilt_functions.cpp  inbuilt_functions.h  (+42 more)
(+18 files in other folders)
